--- a/src/components/projects-timeline/projects-timeline.styles.css
+++ b/src/components/projects-timeline/projects-timeline.styles.css
@@ -4,11 +4,10 @@
   -webkit-text-decoration: none;
   text-decoration: none;
   font-size: 14px;
-  background-color: rgb(14 14 13 / 64%);
+  background-color: rebeccapurple;
   border-radius: 4px;
   padding: 10px;
   color: #fff;
-
 }
 
 .list-styles {
@@ -18,4 +17,3 @@
 .image-style1 {
   width: 3em;
 }
-
